# Imagingwork

./: CMakeLists.txt  CMakePresets.json  SETUP_GENICAM.md  resources.qrc
app/: CMakeLists.txt  Camera_submenu.cpp  Camera_submenu.h  Iconlabel.cpp  Iconlabel.h  Imagingwork.cpp  Imagingwork.h  main.cpp  ui_Imagingwork.cpp  ui_Imagingwork.h
camera/: CMakeLists.txt  ICameraDriver.h  acquisitionWorker.cpp  acquisitionWorker.h  ids_camera.cpp  ids_camera.h
camera/genicam/: ArvCameraDriver.cpp  ArvCameraDriver.h  ArvGenApiXml.cpp  ArvGenApiXml.h  ArvU3vDevice.cpp  ArvU3vDevice.h  ArvU3vProtocol.h  ArvU3vStream.cpp  ArvU3vStream.h  DebayerAVX2.cpp  DebayerAVX2.h  GenApiController.cpp  GenApiController.h
camera/gige/: CMakeLists.txt  GigECameraDriver.cpp  GigECameraDriver.h  GigEDevice.cpp  GigEDevice.h  GigEProtocol.h  GigEStream.cpp  GigEStream.h  IocpTypes.h  WinSockFirst.h
camera/uvc/: CMakeLists.txt  UvcCameraDriver.cpp  UvcCameraDriver.h  UvcConvertAVX2.cpp  UvcConvertAVX2.h
device/: CMakeLists.txt  deviceinfo.h  deviceitemwidget.cpp  deviceitemwidget.h  devicemanager.cpp  devicemanager.h
viewer/: CMakeLists.txt  ImageViewerDock.cpp  ImageViewerDock.h
